packages/CodingStandard/DotBlue/tests/invalid/EmptyInlineMethod.php
<?php

namespace Foo;


class Bar
{

	public function foo() {}



	public function bar() { echo "bar"; echo "bar"; if(FALSE) {echo "false";}}

}
